# Piscine_rust

./: README.md  main.rs
new_piscine/ex01/: min.rs
new_piscine/ex03/: fizzbuzz.rs
new_piscine/ex04/module00-ex04/: Cargo.toml
new_piscine/ex04/module00-ex04/src/: other.rs
new_piscine/r00/ex02/: collatz.rs  print_bytes.rs  yes.rs
new_piscine/r00/ex03/: fizzbuzz
new_piscine/r00/ex04/module00-ex04/src/: other.rs
new_piscine/r00/ex05/src/: lib.rs  main.rs
new_piscine/r00/ex06/: Cargo.toml
new_piscine/r00/ex06/src/: main.rs
new_piscine/r00/ex07/src/: lib.rs  main.rs
new_piscine/r01/ex00/src/: lib.rs  main.rs
new_piscine/r01/ex01/src/: lib.rs
new_piscine/r01/ex02/src/: lib.rs
new_piscine/r01/ex03/src/: lib.rs
new_piscine/r01/ex04/src/: lib.rs
new_piscine/r01/ex05/src/: lib.rs
old_piscine/r00/ex00/: hello.rs
old_piscine/r00/ex01/: min  min.rs
old_piscine/r00/ex02/: collatz  collatz.rs  print_bytes  print_bytes.rs  yes.rs
old_piscine/r00/ex03/: a.out  fizzbuzz.c
old_piscine/r00/ex04/: dont_panic  dont_panic.rs
old_piscine/r00/ex06/src/: main.rs
r00/ex00/: hello  hello.rs
r00/ex01/: min
r00/ex02/: collatz  print_bytes
r00/ex03/: fizzbuzz  fizzbuzz.rs
r00/ex04/module00-ex04/src/: default.rs  overflows.rs
r00/ex05/src/: main.rs
r00/ex06/src/: lib.rs
r00/ex06/tests/: test.rs
r00/ex07/: Cargo.toml
r00/ex07/src/: main.rs
r01/: module-01 (1).md
r01/ex00/src/: lib.rs
r01/ex01/src/: main.rs
r01/ex02/src/: lib.rs  main.rs
r01/ex03/src/: lib.rs
r01/ex04/src/: lib.rs
r01/ex06/src/: lib.rs
