[package]
name = "module00-ex04"
default-run = "default"
version = "0.1.0"
edition = "2021"
authors = ["pjay"]
description = "my answer to the fifth exercise of the first module of 42’s Rust Piscine"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
	name = "other"
	path = "src/other.rs"
	debug_assertions = false
[[bin]]
	name = "default"
	path = "src/default.rs"
[[bin]]
	name = "test-overflows"
	path = "src/overflows.rs"
	[profile.dev]
	overflows-checks = false
